--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 .walrus-showing {
   display: none;
 }
+
+p {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+p:hover {
+  color: #ee99cc;
+  text-decoration: underline;
+}
