Changed class of walrus to initially so we can re-use the code later

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,12 @@
-.walrus-showing {
+.initially-showing {
   display: none;
 }
 
-p {
+.clickable {
   cursor: pointer;
   color: #0088cc;
 }
 
-p:hover {
-  color: #ee99cc;
+.clickable:hover {
   text-decoration: underline;
 }
